[workspace]
resolver = "2"
members = [
  "core",
  "core-sys",
  "core-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
authors = ["Redpanda Data Transforms Team"]
homepage = "https://redpanda.com"
repository = "https://github.com/redpanda-data/redpanda"
license = "Apache-2.0"
keywords = ["redpanda", "wasm", "kafka", "data-transform"]
categories = ["wasm"]

[workspace.dependencies]
quickcheck = "1.0"
rand = "0.8"
anyhow = "1.0"
