v_cc_library(
    NAME cloud_roles
    HDRS
    azure_aks_refresh_impl.h
    azure_vm_refresh_impl.h
    apply_abs_oauth_credentials.h
    SRCS
    apply_abs_credentials.cc
    apply_abs_oauth_credentials.cc
    apply_aws_credentials.cc
    apply_credentials.cc
    apply_gcp_credentials.cc
    aws_refresh_impl.cc
    aws_sts_refresh_impl.cc
    gcp_refresh_impl.cc
    azure_aks_refresh_impl.cc
    azure_vm_refresh_impl.cc
    probe.cc
    refresh_credentials.cc
    request_response_helpers.cc
    types.cc
    signature.cc
    DEPS
    Seastar::seastar
    v::http
    v::model
    v::utils
    ada
)

add_subdirectory(tests)
